Fix overflow issue w/ catalogue category badge

--- a/static/style.css
+++ b/static/style.css
@@ -1431,6 +1431,10 @@ a.support-link {
     .resource-detail-emphasised-section {
         padding: 2rem;
     }
+
+    .catalogue-category-badge {
+        font-size: 1rem;
+    }
 }
 
 @media (min-width: 450px) {
